--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Турецкий ремонт</title>
 </head>
 
 <body>
@@ -39,7 +39,8 @@
             </div>
             <div class="container">
                 <div class="hero__content">
-                    <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
+                    <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span
+                            class="title--primary">Ростове-на-дону</span></h1>
                     <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45
                         дней и 20% от стоимости материалов за счет организации работы</p>
                     <button class="button hero__button button--primary">Рассчитать стоимость</button>
@@ -66,6 +67,202 @@
             <!-- /.container -->
         </section>
         <!-- /.section control -->
+        <section class="section types">
+            <div class="container">
+                <div class="section-title types__section-title">
+                    <h2 class="section-title__heading">виды ремонта</h2>
+                    <!-- /.section-title__heading -->
+                    <div class="section-title__image">
+                        <img src="img/types.svg" alt="#">
+                    </div>
+                    <!-- /.section-title__image -->
+                </div>
+                <!-- /.section-title -->
+                <div class="row">
+                    <div class="col">
+                        <div class="card types__card">
+                            <img src="img/types/type-1.png" alt="Косметический ремонт" class="card__image">
+                            <div class="card__text">
+                                <h3 class="card__title">Косметический ремонт</h3>
+                                <!-- /.card__title -->
+                                <ul class="card__list">
+                                    <li class="card__item">Демонтаж старых покрытий</li>
+                                    <li class="card__item">Поклейка обоев</li>
+                                    <li class="card__item">Роспись стен и потолков</li>
+                                    <li class="card__item">Укладка полов</li>
+                                    <li class="card__item">Замена сантехники</li>
+                                    <li class="card__item">Замена розеток и выключателей</li>
+                                    <li class="card__item">Замена дверей</li>
+                                    <!-- /.card__item -->
+                                </ul>
+                                <!-- /.card__list -->
+                                <strong class="card__pricetag">
+                                    от 900 руб / m<sup>2</sup> 
+                                </strong>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="card types__card">
+                            <img src="img/types/type-2.png" alt="Капитальный ремонт" class="card__image">
+                            <div class="card__text">
+                                <h3 class="card__title">Капитальный ремонт</h3>
+                                <!-- /.card__title -->
+                                <ul class="card__list">
+                                    <li class="card__item">Демонтаж старых покрытий</li>
+                                    <li class="card__item">Поклейка обоев</li>
+                                    <li class="card__item">Роспись стен и потолков</li>
+                                    <li class="card__item">Укладка полов</li>
+                                    <li class="card__item">Замена сантехники</li>
+                                    <li class="card__item">Замена розеток и выключателей</li>
+                                    <li class="card__item">Замена дверей</li>
+                                    <!-- /.card__item -->
+                                </ul>
+                                <!-- /.card__list -->
+                                <strong class="card__pricetag">
+                                    от 1800 руб / m<sup>2</sup> 
+                                </strong>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="card types__card">
+                            <img src="img/types/type-3.png" alt="Дизайнерский ремонт" class="card__image">
+                            <div class="card__text">
+                                <h3 class="card__title">Дизайнерский ремонт</h3>
+                                <!-- /.card__title -->
+                                <ul class="card__list">
+                                    <li class="card__item">Демонтаж старых покрытий</li>
+                                    <li class="card__item">Поклейка обоев</li>
+                                    <li class="card__item">Роспись стен и потолков</li>
+                                    <li class="card__item">Укладка полов</li>
+                                    <li class="card__item">Замена сантехники</li>
+                                    <li class="card__item">Замена розеток и выключателей</li>
+                                    <li class="card__item">Замена дверей</li>
+                                    <!-- /.card__item -->
+                                </ul>
+                                <!-- /.card__list -->
+                                <strong class="card__pricetag">
+                                    от 4000 руб / m<sup>2</sup> 
+                                </strong>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+            </div>
+        </section>
+
+        <section class="section design">
+            <div class="container">
+                <div class="section-title design__section-title">
+                    <h2 class="section-title__heading">Дизайн проект</h2>
+                    <!-- /.section-title__heading -->
+                    <div class="section-title__image">
+                        <img src="img/design.svg" alt="#">
+                    </div>
+                    <!-- /.section-title__image -->
+                    <p class="section-title__description">
+                        Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно удешевляет материалы и сокращает время ремонтных работ
+                    </p>
+                </div>
+                <!-- /.section-title -->
+                <div class="row">
+                    <div class="col">
+                        <div class="card design__card">
+                            <img src="img/design/design-1.png" alt="Минимальный" class="card__image">
+                            <div class="card__text">
+                                <h3 class="card__title">Минимальный</h3>
+                                <!-- /.card__title -->
+                                <ul class="card__list">
+                                    <li class="card__item">Измерительные чертежи</li>
+                                    <li class="card__item">Перепланировка</li>
+                                    <li class="card__item">Планировка мебели</li>
+                                    <li class="card__item">Сантехнический план</li>
+                                    <!-- /.card__item -->
+                                </ul>
+                                <!-- /.card__list -->
+                                <strong class="card__pricetag">
+                                    150 руб / m<sup>2</sup> 
+                                </strong>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->  
+                    </div>
+    
+                    <div class="col">
+                        <div class="card design__card">
+                            <img src="img/design/design-2.png" alt="Стандартный" class="card__image">
+                            <div class="card__text">
+                                <h3 class="card__title">Стандартный</h3>
+                                <!-- /.card__title -->
+                                <ul class="card__list">
+                                    <li class="card__item">Измерительные чертежи</li>
+                                    <li class="card__item">Перепланировка</li>
+                                    <li class="card__item">Планировка мебели</li>
+                                    <li class="card__item">План потолков </li>
+                                    <li class="card__item">План этажей</li>
+                                    <li class="card__item">План электрики</li>
+                                    <li class="card__item">План света</li>
+                                    <!-- /.card__item -->
+                                </ul>
+                                <!-- /.card__list -->
+                                <strong class="card__pricetag">
+                                    400 руб / m<sup>2</sup> 
+                                </strong>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card --> 
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="card design__card">
+                            <img src="img/design/design-3.png" alt="Полный" class="card__image">
+                            <div class="card__text">
+                                <h3 class="card__title">Полный</h3>
+                                <!-- /.card__title -->
+                                <ul class="card__list">
+                                    <li class="card__item">Измерительные чертежи</li>
+                                    <li class="card__item">Перепланировка</li>
+                                    <li class="card__item">Планировка мебели</li>
+                                    <li class="card__item">План потолков </li>
+                                    <li class="card__item">План этажей</li>
+                                    <li class="card__item">План электрики</li>
+                                    <li class="card__item">План света</li>
+                                    <li class="card__item">Стенные развертки</li>
+                                    <li class="card__item">3D визуализация</li>
+                                    <li class="card__item">Смета на материалы</li>
+                                    <li class="card__item">Выезд на подбор материалов</li>
+                                    <li class="card__item">Выбор мебели</li>
+                                    <!-- /.card__item -->
+                                </ul>
+                                <!-- /.card__list -->
+                                <strong class="card__pricetag">
+                                    900 руб / m<sup>2</sup> 
+                                </strong>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card --> 
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+     
+            </div>
+        </section>
+        <!-- /.design -->
     </main>
 </body>
 
