--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <strong class="card__pricetag">
-                                    от 900 руб / m<sup>2</sup> 
+                                    от 900 руб / m<sup>2</sup>
                                 </strong>
                             </div>
                             <!-- /.card__text -->
@@ -123,7 +123,7 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <strong class="card__pricetag">
-                                    от 1800 руб / m<sup>2</sup> 
+                                    от 1800 руб / m<sup>2</sup>
                                 </strong>
                             </div>
                             <!-- /.card__text -->
@@ -149,7 +149,7 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <strong class="card__pricetag">
-                                    от 4000 руб / m<sup>2</sup> 
+                                    от 4000 руб / m<sup>2</sup>
                                 </strong>
                             </div>
                             <!-- /.card__text -->
@@ -172,7 +172,8 @@
                     </div>
                     <!-- /.section-title__image -->
                     <p class="section-title__description">
-                        Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно удешевляет материалы и сокращает время ремонтных работ
+                        Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и
+                        значительно удешевляет материалы и сокращает время ремонтных работ
                     </p>
                 </div>
                 <!-- /.section-title -->
@@ -192,14 +193,14 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <strong class="card__pricetag">
-                                    150 руб / m<sup>2</sup> 
+                                    150 руб / m<sup>2</sup>
                                 </strong>
                             </div>
                             <!-- /.card__text -->
                         </div>
-                        <!-- /.card -->  
+                        <!-- /.card -->
                     </div>
-    
+
                     <div class="col">
                         <div class="card design__card">
                             <img src="img/design/design-2.png" alt="Стандартный" class="card__image">
@@ -218,12 +219,12 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <strong class="card__pricetag">
-                                    400 руб / m<sup>2</sup> 
+                                    400 руб / m<sup>2</sup>
                                 </strong>
                             </div>
                             <!-- /.card__text -->
                         </div>
-                        <!-- /.card --> 
+                        <!-- /.card -->
                     </div>
                     <!-- /.col -->
                     <div class="col">
@@ -249,21 +250,44 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <strong class="card__pricetag">
-                                    900 руб / m<sup>2</sup> 
+                                    900 руб / m<sup>2</sup>
                                 </strong>
                             </div>
                             <!-- /.card__text -->
                         </div>
-                        <!-- /.card --> 
+                        <!-- /.card -->
                     </div>
                     <!-- /.col -->
                 </div>
                 <!-- /.row -->
-     
+
             </div>
         </section>
         <!-- /.design -->
     </main>
+
+    <div class="modal">
+        <div class="modal__dialog">
+            <button class="modal__close"></button>
+            <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
+            <form action="#" class="form modal__form">
+                <label for="user-name" class="label form__label label--light">Имя</label>
+                <input type="tel" class="input form__input modal__input" id="user-name" placeholder="Как вас зовут:">
+                <label for="user-phone" class="label form__label label--light">Телефон</label>
+                <input type="text" class="input form__input modal__input" id="user-phone" placeholder="Ваш номер телефона:">
+                <label for="user-email" class="label form__label label--light">Email</label>
+                <input type="email" class="input form__input modal__input" id="user-email" placeholder="Ваш email">
+                <div class="policy modal__policy">
+                    <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+                    <label for="policy-checkbox" class="policy__label">я соглашаюсь с обработкой данных</label>
+                </div>
+                <!-- /.policy -->
+                <button class="button button--primary modal__button">Отправить заявку</button>
+            </form>
+        </div>
+        <!-- /.modal__dialog -->
+    </div>
+    <!-- /.modal -->
 </body>
 
 </html>
