feat: function for scrollup button

--- a/index.html
+++ b/index.html
@@ -288,6 +288,10 @@
         <!-- /.modal__dialog -->
     </div>
     <!-- /.modal -->
+    <div class="scrollup">
+        <button class="button button--primary">Наверх</button>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
