feat: add section work

--- a/index.html
+++ b/index.html
@@ -151,9 +151,12 @@
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper swiper-no-swiping">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="../img/project/project1.jpg" alt="#"></div>
-                <div class="swiper-slide"><img src="../img/project/project1.jpg" alt="#"></div>
-                <div class="swiper-slide"><img src="../img/project/project1.jpg" alt="#"></div>
+                <div class="swiper-slide swiper-slide__image"><img src="../img/project/project1.jpg" alt="#"
+                    class="swiper-slid__item"></div>
+                <div class="swiper-slide swiper-slide__image"><img src="../img/project/project1.jpg" alt="#"
+                    class="swiper-slid__item"></div>
+                <div class="swiper-slide swiper-slide__image"><img src="../img/project/project1.jpg" alt="#"
+                    class="swiper-slid__item"></div>
               </div>
             </div>
           </div>
@@ -377,6 +380,138 @@
       </div>
     </section>
     <!-- /.design -->
+    <section class="section section--dark work">
+      <div class="container">
+        <div class="row">
+          <div class="col--left">
+            <div class="section-title section-title--left">
+              <p class="section-title__suptitle">как мы работаем</p>
+              <h2 class="section-title__heading section-title__heading--primary">6 шагов <span
+                  class="section-title__word section-title__work">до цели</span></h2>
+              <!-- /.section-title__heading -->
+            </div>
+            <!-- /.section-title -->
+            <!-- Slider main container -->
+            <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper swiper-no-swiping">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <div class="work__number">1/6</div>
+                  <h3 class="work__subtitle">Выезд на замеры<br>помещения</h3>
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                    Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
+                    Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
+                    дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+                  </p>
+                </div>
+                <div class="swiper-slide">
+                  <div class="work__number">1/6</div>
+                  <h3 class="work__subtitle">Составление<br>сметы</h3>
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                    Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
+                    Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
+                    дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+                  </p>
+                </div>
+                <div class="swiper-slide">
+                  <div class="work__number">1/6</div>
+                  <h3 class="work__subtitle">Разработка<br>дизайн проекта</h3>
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                    Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
+                    Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
+                    дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+                  </p>
+                </div>
+                <div class="swiper-slide">
+                  <div class="work__number">1/6</div>
+                  <h3 class="work__subtitle">Закупка расходных<br>материалов</h3>
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                    Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
+                    Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
+                    дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+                  </p>
+                </div>
+                <div class="swiper-slide">
+                  <div class="work__number">1/6</div>
+                  <h3 class="work__subtitle">Ремонтно-отделочные<br>работы</h3>
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                    Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
+                    Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
+                    дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+                  </p>
+                </div>
+                <div class="swiper-slide">
+                  <div class="work__number">1/6</div>
+                  <h3 class="work__subtitle">Приемка-сдача<br>работ</h3>
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                    Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
+                    Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
+                    дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+                  </p>
+                </div>
+              </div>
+              <!-- If we need pagination -->
+              <!-- If we need navigation buttons -->
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-pagination swiper-pagination-work"></div>
+              <div class="swiper-button-next swiper-button-next-work"></div>
+            </div>
+          </div>
+          <div class="col--right">
+            <div class="work__stepnames">
+              <div class="work__step">
+                <p class="work__step__name">01</p>
+                <p class="work__step__description">Выезд на замер<br>помещения</p>
+              </div>
+              <!-- /.step__work -->
+              <div class="work__step">
+                <p class="work__step__name">02</p>
+                <p class="work__step__description">Составление<br>сметы</p>
+              </div>
+              <!-- /.step__work -->
+              <div class="work__step">
+                <p class="work__step__name">03</p>
+                <p class="work__step__description">Разработка<br>дизайн проекта</p>
+              </div>
+              <!-- /.step__work -->
+              <div class="work__step">
+                <p class="work__step__name">04</p>
+                <p class="work__step__description">Закупка расходных<br>материалов</p>
+              </div>
+              <!-- /.step__work -->
+              <div class="work__step">
+                <p class="work__step__name">05</p>
+                <p class="work__step__description">Ремонтно-отделочные работы</p>
+              </div>
+              <!-- /.step__work -->
+              <div class="work__step">
+                <p class="work__step__name">06</p>
+                <p class="work__step__description">Приемка-сдача<br>работ</p>
+              </div>
+              <!-- /.step__work -->
+            </div>
+            <!-- /.stepnames__work -->
+            <!-- Slider main container -->
+            <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper swiper-no-swiping">
+                <!-- Slides -->
+                <div class="swiper-slide swiper-slide__image"><img src="../img/work/work1.png" alt="#"
+                    class="swiper-slid__item"></div>
+                <div class="swiper-slide swiper-slide__image"><img src="../img/work/work1.png" alt="#"
+                    class="swiper-slid__item"></div>
+                <div class="swiper-slide swiper-slide__image"><img src="../img/work/work1.png" alt="#"
+                    class="swiper-slid__item"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section work -->
   </main>
 
   <div class="modal">
@@ -406,7 +541,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.js" defer></script>
 
 </body>
 
