feat: add animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Турецкий ремонт</title>
 </head>
@@ -15,7 +16,7 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo">Repair Design Project</div>
+        <div class="logo menu__logo animate__animated animate__fadeInLeft animate__delay-2s">Repair Design Project</div>
         <nav class="nav menu__nav">
           <a href="#" class="nav__item">Главная</a>
           <a href="#" class="nav__item">Проекты</a>
@@ -40,17 +41,17 @@
       </div>
       <div class="container">
         <div class="hero__content">
-          <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
-          <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45
+          <h1 class="title hero__title animate__animated animate__fadeInLeft">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
+          <p class="hero__text animate__animated animate__fadeInLeft">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45
             дней и 20% от стоимости материалов за счет организации работы</p>
-          <button class="button hero__button button--primary" data-toggle="modal">Рассчитать
+          <button class="button hero__button button--primary animate__animated animate__fadeInLeft" data-toggle="modal">Рассчитать
             стоимость</button>
-          <button class="button hero__button button--outline" data-toggle="modal">Отправить заявку</button>
+          <button class="button hero__button button--outline animate__animated animate__fadeInLeft" data-toggle="modal">Отправить заявку</button>
         </div>
         <!-- /.hero-content -->
       </div>
       <!-- /.container -->
-      <a href="#" class="hero__scroll-down">листайте вниз</a>
+      <a href="#" class="hero__scroll-down animate__animated animate__pulse">листайте вниз</a>
     </section>
     <!-- /.hero -->
     <section class="section section--dark projects">
@@ -169,7 +170,7 @@
     <!-- /.projects -->
     <section class="section control">
       <div class="container">
-        <div class="section-title">
+        <div class="section-title control__section-title section-title--light">
           <h2 class="section-title__heading">онлайн контроль</h2>
           <!-- /.section-title__heading -->
           <div class="section-title__image">
@@ -178,6 +179,28 @@
           <!-- /.section-title__image -->
         </div>
         <!-- /.section-title -->
+        <div class="control__video video">
+          <img src="img/play-icon.svg" alt="play icon" class="video__play">
+        </div>
+        <!-- /.control__video video -->
+        <p class="control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
+      <form action="#" class="form control__form">
+        <div class="control__input-group">
+          <label for="user-name" class="label form__label control__label">Имя</label>
+          <input type="tel" class="input form__input control__input control__input--light" id="user-name" placeholder="Как вас зовут:">
+        </div>
+        <div class="control__input-group">
+          <label for="user-phone" class="label form__label control__label">Телефон</label>
+          <input type="text" class="input form__input control__input control__input--light input--light" id="user-phone" placeholder="Ваш номер телефона:">
+        </div>
+        <button class="button button--primary control__button">Отправить</button>
+        <div class="policy control__policy">
+          <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+          <label for="policy-checkbox" class="policy__label control__policy-label">я соглашаюсь с обработкой данных</label>
+        </div>
+        <!-- /.policy -->
+        
+      </form>
       </div>
       <!-- /.container -->
     </section>
@@ -541,6 +564,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="js/wow.min.js" defer></script>
   <script src="js/main.js" defer></script>
 
 </body>
