--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
       </div>
       <div class="container">
         <div class="hero__content">
-          <h1 class="title hero__title animate__animated animate__fadeInLeft">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
-          <p class="hero__text animate__animated animate__fadeInLeft">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45
+          <h1 class="title hero__title animate__animated animate__fadeInLeft">Турецкий ремонт в&nbsp;<span
+              class="title--primary">Ростове-на-дону</span></h1>
+          <p class="hero__text animate__animated animate__fadeInLeft">Получите готовый ремонт под ключ в срок с
+            экономией рабочего времени до 45
             дней и 20% от стоимости материалов за счет организации работы</p>
-          <button class="button hero__button button--primary animate__animated animate__fadeInLeft" data-toggle="modal">Рассчитать
+          <button class="button hero__button button--primary animate__animated animate__fadeInLeft"
+            data-toggle="modal">Рассчитать
             стоимость</button>
-          <button class="button hero__button button--outline animate__animated animate__fadeInLeft" data-toggle="modal">Отправить заявку</button>
+          <button class="button hero__button button--outline animate__animated animate__fadeInLeft"
+            data-toggle="modal">Отправить заявку</button>
         </div>
         <!-- /.hero-content -->
       </div>
@@ -183,24 +187,29 @@
           <img src="img/play-icon.svg" alt="play icon" class="video__play">
         </div>
         <!-- /.control__video video -->
-        <p class="control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
-      <form action="#" class="form control__form">
-        <div class="control__input-group">
-          <label for="user-name" class="label form__label control__label">Имя</label>
-          <input type="tel" class="input form__input control__input control__input--light" id="user-name" placeholder="Как вас зовут:">
-        </div>
-        <div class="control__input-group">
-          <label for="user-phone" class="label form__label control__label">Телефон</label>
-          <input type="text" class="input form__input control__input control__input--light input--light" id="user-phone" placeholder="Ваш номер телефона:">
-        </div>
-        <button class="button button--primary control__button">Отправить</button>
-        <div class="policy control__policy">
-          <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
-          <label for="policy-checkbox" class="policy__label control__policy-label">я соглашаюсь с обработкой данных</label>
-        </div>
-        <!-- /.policy -->
-        
-      </form>
+        <p class="control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В
+          любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую
+          трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
+        <form action="#" class="form control__form">
+          <div class="control__input-group">
+            <label for="user-name" class="label form__label control__label">Имя</label>
+            <input type="text" name="userName" class="input form__input control__input control__input--light" id="user-name"
+              placeholder="Как вас зовут:">
+          </div>
+          <div class="control__input-group">
+            <label for="user-phone" class="label form__label control__label">Телефон</label>
+            <input type="tel"name="userPhone" class="input form__input control__input control__input--light input--light"
+              id="user-phone" placeholder="Ваш номер телефона:">
+          </div>
+          <button class="button button--primary control__button">Отправить</button>
+          <div class="policy control__policy">
+            <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+            <label for="policy-checkbox" class="policy__label control__policy-label">я соглашаюсь с обработкой
+              данных</label>
+          </div>
+          <!-- /.policy -->
+
+        </form>
       </div>
       <!-- /.container -->
     </section>
@@ -419,55 +428,61 @@
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper swiper-no-swiping">
                 <!-- Slides -->
-                <div class="swiper-slide">
+                <div class="swiper-slide work__swiper-slide">
                   <div class="work__number">1/6</div>
                   <h3 class="work__subtitle">Выезд на замеры<br>помещения</h3>
-                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить
+                    помещения вашей квартиры.
                     Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                     Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
                     дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
                   </p>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide work__swiper-slide">
                   <div class="work__number">1/6</div>
                   <h3 class="work__subtitle">Составление<br>сметы</h3>
-                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить
+                    помещения вашей квартиры.
                     Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                     Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
                     дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
                   </p>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide work__swiper-slide">
                   <div class="work__number">1/6</div>
                   <h3 class="work__subtitle">Разработка<br>дизайн проекта</h3>
-                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить
+                    помещения вашей квартиры.
                     Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                     Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
                     дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
                   </p>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide work__swiper-slide">
                   <div class="work__number">1/6</div>
                   <h3 class="work__subtitle">Закупка расходных<br>материалов</h3>
-                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить
+                    помещения вашей квартиры.
                     Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                     Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
                     дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
                   </p>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide work__swiper-slide">
                   <div class="work__number">1/6</div>
                   <h3 class="work__subtitle">Ремонтно-отделочные<br>работы</h3>
-                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить
+                    помещения вашей квартиры.
                     Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                     Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
                     дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
                   </p>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide work__swiper-slide">
                   <div class="work__number">1/6</div>
                   <h3 class="work__subtitle">Приемка-сдача<br>работ</h3>
-                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры.
+                  <p class="work__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить
+                    помещения вашей квартиры.
                     Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                     Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта,
                     дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
@@ -483,32 +498,32 @@
           </div>
           <div class="col--right">
             <div class="work__stepnames">
-              <div class="work__step">
+              <div class="work__step work__step--light" data-work-step="0">
                 <p class="work__step__name">01</p>
                 <p class="work__step__description">Выезд на замер<br>помещения</p>
               </div>
               <!-- /.step__work -->
-              <div class="work__step">
+              <div class="work__step" data-work-step="1">
                 <p class="work__step__name">02</p>
                 <p class="work__step__description">Составление<br>сметы</p>
               </div>
               <!-- /.step__work -->
-              <div class="work__step">
+              <div class="work__step" data-work-step="2">
                 <p class="work__step__name">03</p>
                 <p class="work__step__description">Разработка<br>дизайн проекта</p>
               </div>
               <!-- /.step__work -->
-              <div class="work__step">
+              <div class="work__step" data-work-step="3">
                 <p class="work__step__name">04</p>
                 <p class="work__step__description">Закупка расходных<br>материалов</p>
               </div>
               <!-- /.step__work -->
-              <div class="work__step">
+              <div class="work__step" data-work-step="4">
                 <p class="work__step__name">05</p>
                 <p class="work__step__description">Ремонтно-отделочные работы</p>
               </div>
               <!-- /.step__work -->
-              <div class="work__step">
+              <div class="work__step" data-work-step="5">
                 <p class="work__step__name">06</p>
                 <p class="work__step__description">Приемка-сдача<br>работ</p>
               </div>
@@ -536,18 +551,80 @@
     </section>
     <!-- /.section work -->
   </main>
+  <footer class="footer section--dark">
+    <div class="container">
+      <div class="footer__wrap">
+        <h3 class="footer__title">Остались вопросы?</h3>
+        <form action="#" class="form footer__form">
+          <div class="input-group footer__input-group">
+            <label for="user-name" class="label form__label label--light">Имя</label>
+            <input type="text" name="userName" class="input form__input footer__input" id="user-name" placeholder="Как вас зовут:">
+          </div>
+          <div class="input-group footer__input-group">
+            <label for="user-phone" class="label form__label label--light">Телефон</label>
+            <input type="tel" name="userPhone" class="input form__input footer__input" id="user-phone"
+              placeholder="Ваш номер телефона:">
+          </div>
+          <div class="input-group footer__input-group footer__input-group--full-width">
+            <label for="user-question" class="label form__label label--light">Вопрос</label>
+            <input type="text" class="input form__input footer__input" id="user-question" placeholder="Я хочу спросить">
+          </div>
+          <div class="policy footer__policy">
+            <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+            <label for="policy-checkbox" class="policy__label policy__label--center">я соглашаюсь с обработкой
+              данных</label>
+          </div>
+          <!-- /.policy -->
+          <button class="button button--primary footer__button">Отправить заявку</button>
+        </form>
+      </div>
+      <!-- /.footer-wrap -->
+    </div>
+    <!-- /.container -->
+    <div class="footer__menu">
+      <div class="container">
+        <div class="menu">
+          <div class="logo menu__logo animate__animated animate__fadeInLeft animate__delay-2s">Repair Design Project
+          </div>
+          <nav class="nav menu__nav">
+            <a href="#" class="nav__item">Главная</a>
+            <a href="#" class="nav__item">Проекты</a>
+            <a href="#" class="nav__item">Замер</a>
+            <a href="#" class="nav__item">Команда</a>
+            <a href="#" class="nav__item">Отзывы</a>
+            <a href="#" class="nav__item">Контакты</a>
+          </nav>
+          <div class="contacts menu__contacts">
+            <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
+            <button class="button contacts__button button--primary" data-toggle="modal">Заказать звонок</button>
+          </div>
+        </div>
+        <!-- /.menu -->
+      </div>
+    </div>
+
+  </footer>
 
   <div class="modal">
     <div class="modal__dialog">
       <button class="modal__close"></button>
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
       <form action="#" class="form modal__form">
-        <label for="user-name" class="label form__label label--light">Имя</label>
-        <input type="tel" class="input form__input modal__input" id="user-name" placeholder="Как вас зовут:">
-        <label for="user-phone" class="label form__label label--light">Телефон</label>
-        <input type="text" class="input form__input modal__input" id="user-phone" placeholder="Ваш номер телефона:">
-        <label for="user-email" class="label form__label label--light">Email</label>
-        <input type="email" class="input form__input modal__input" id="user-email" placeholder="Ваш email">
+        <div class="input-group modal__input-group">
+          <label for="user-name" class="label form__label label--light">Имя</label>
+          <input type="text" name="userName" class="input form__input modal__input" id="user-name"
+            placeholder="Как вас зовут:">
+        </div>
+        <div class="input-group modal__input-group">
+          <label for="user-phone" class="label form__label label--light">Телефон</label>
+          <input type="tel" name="userPhone" class="input form__input modal__input" id="user-phone"
+            placeholder="Ваш номер телефона:">
+        </div>
+        <div class="input-group modal__input-group">
+          <label for="user-email" class="label form__label label--light">Email</label>
+          <input type="email" name="userEmail" class="input form__input modal__input" id="user-email"
+            placeholder="Ваш email">
+        </div>
         <div class="policy modal__policy">
           <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
           <label for="policy-checkbox" class="policy__label">я соглашаюсь с обработкой данных</label>
@@ -565,6 +642,8 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="js/wow.min.js" defer></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.mask.min.js"></script>
   <script src="js/main.js" defer></script>
 
 </body>
